// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowInline renders 0 1`] = `
Array [
  .c0 {
  overflow-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders function 1`] = `
Array [
  .c0 {
  overflow-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders negative number 1`] = `
Array [
  .c0 {
  overflow-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  overflow-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  overflow-inline: July;
}

@media May {
  .c0 {
    overflow-inline: August;
  }
}

@media April {
  .c0 {
    overflow-inline: September;
  }
}

@media January {
  .c0 {
    overflow-inline: November;
  }
}

@media April {
  .c0 {
    overflow-inline: August;
  }
}

@media June {
  .c0 {
    overflow-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: July;
}

@media May {
  .c0 {
    overflow-inline: August;
  }
}

@media April {
  .c0 {
    overflow-inline: September;
  }
}

@media January {
  .c0 {
    overflow-inline: November;
  }
}

@media April {
  .c0 {
    overflow-inline: August;
  }
}

@media June {
  .c0 {
    overflow-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-inline: November;
  }
}

@media April {
  .c0 {
    overflow-inline: January;
  }
}

@media January {
  .c0 {
    overflow-inline: December;
  }
}

@media April {
  .c0 {
    overflow-inline: April;
  }
}

@media June {
  .c0 {
    overflow-inline: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-inline: November;
  }
}

@media April {
  .c0 {
    overflow-inline: January;
  }
}

@media January {
  .c0 {
    overflow-inline: December;
  }
}

@media April {
  .c0 {
    overflow-inline: April;
  }
}

@media June {
  .c0 {
    overflow-inline: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    overflow-inline: July;
  }
}

@media April {
  .c0 {
    overflow-inline: August;
  }
}

@media January {
  .c0 {
    overflow-inline: September;
  }
}

@media April {
  .c0 {
    overflow-inline: November;
  }
}

@media June {
  .c0 {
    overflow-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-inline: July;
  }
}

@media April {
  .c0 {
    overflow-inline: August;
  }
}

@media January {
  .c0 {
    overflow-inline: September;
  }
}

@media April {
  .c0 {
    overflow-inline: November;
  }
}

@media June {
  .c0 {
    overflow-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-inline: January;
  }
}

@media April {
  .c0 {
    overflow-inline: December;
  }
}

@media January {
  .c0 {
    overflow-inline: April;
  }
}

@media April {
  .c0 {
    overflow-inline: May;
  }
}

@media June {
  .c0 {
    overflow-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-inline: January;
  }
}

@media April {
  .c0 {
    overflow-inline: December;
  }
}

@media January {
  .c0 {
    overflow-inline: April;
  }
}

@media April {
  .c0 {
    overflow-inline: May;
  }
}

@media June {
  .c0 {
    overflow-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders postitive number 1`] = `
Array [
  .c0 {
  overflow-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders string 1`] = `
Array [
  .c0 {
  overflow-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowInline renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`overflowInline renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
